# reolink-ctl

./: .env.example  .gitignore  README.md  download.py  pyproject.toml
.github/workflows/: test.yml
docs/plans/: 2026-02-20-reolink-downloader-plan.md  2026-02-20-reolink-person-video-downloader-design.md  2026-02-27-config-command-design.md  2026-02-27-config-command-plan.md
reolink_ctl/: __init__.py  __main__.py  cli.py  connection.py  output.py  time_utils.py  vod.py
reolink_ctl/commands/: audio.py  config.py  detect.py  download.py  image.py  info.py  light.py  monitor.py  notify.py  ptz.py  snapshot.py  stream.py  system.py  webhook.py
tests/: conftest.py  test_cli.py  test_cli_dispatch.py  test_cmd_audio.py  test_cmd_config.py  test_cmd_detect.py  test_cmd_info.py  test_cmd_light.py  test_cmd_monitor.py  test_cmd_notify.py  test_cmd_ptz.py  test_cmd_snapshot.py  test_cmd_system.py  test_connection.py  test_download.py  test_e2e.py  test_output.py  test_time_utils.py  test_vod.py
