[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reolink-ctl"
version = "0.3.0"
description = "CLI for Reolink camera control"
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Vlad", email = "slayer@users.noreply.github.com"}]
keywords = ["reolink", "camera", "cli", "surveillance", "iot", "smart-home"]
classifiers = [
    "Environment :: Console",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "reolink_aio>=0.9.0,<0.9.8",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/slayer/reolink-ctl"
Repository = "https://github.com/slayer/reolink-ctl"
Issues = "https://github.com/slayer/reolink-ctl/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
reolink-ctl = "reolink_ctl.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring a real camera (set REOLINK_HOST)",
]
